--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,15 @@
 Django==5.0.1
 django-compressor==4.5.1
-psycopg2-binary==2.9.9
+psycopg2-binary==3.2.9
 python-dotenv==1.1.0
+django-daisy==1.0.22
+
+requests==2.31.0
+beautifulsoup4==4.12.2
+
+pandas==2.1.4
+numpy==1.26.3
+
+django-debug-toolbar==4.2.0
+
+django-robots==6.1.0
